syntax = "proto3";
package com.example.Terrain;
option java_multiple_files = true;

message TerrainResponse {
  string id = 1;
  int32  sizeBeauty = 2;
  string name = 3;
}

message TerrainRequest {
  int32  sizeBeauty = 2;
  string name = 3;
}

message AllTerrainRequest {

}

message AllTerrainResponse {
  repeated TerrainResponse Terrain = 1;
}

message TerrainByIdRequest {
  string id = 1;
}

message TerrainByNameRequest {
  string name = 1;
}

message DeleteTerrainResponse {

}

service TerrainService {
  rpc all(AllTerrainRequest) returns (AllTerrainResponse);
  rpc add(TerrainRequest) returns (TerrainResponse);
  rpc byId(TerrainByIdRequest) returns (TerrainResponse);
  rpc byName(TerrainByNameRequest) returns (TerrainResponse);
  rpc delete (TerrainByIdRequest) returns (DeleteTerrainResponse);
}
